--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+ /* *{ 
+    margin: 0;
+    padding: 0;
+}*/
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -49,6 +54,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+
 }
 #footer {
   background-color: #444;
@@ -132,7 +138,7 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
-.filter-options select {
+.filter-options select { 
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
@@ -296,16 +302,20 @@ nav h1 a {
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 748px) {
   nav h1, #restaurant-name {
     font-size: small;
     padding: 8px;
   }
   
-  filter-options h2 {
-    display: none;
-  }
+  
+  .filter-options {
+    
+    display:block;
+    padding: 10px 10px 80px 70px;
+  } 
 
+ 
   .inside #map-container {
     width: 100%;
     height: 360px;
@@ -339,11 +349,12 @@ nav h1 a {
       justify-content: center;
       width: 100%;
   }
-  #restaurant-cuisine {
-   display: none;
-  }
+ 
   #footer {
+    text-align: left;
     font-size: 10px;
-		width: 100% !important;  /*add priority */
+    width: 100% !important;  /*add priority */
   }
 }
+
+
