--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,16 @@ nav h1 a {
   position: absolute;
   width: 100%;
 }
+
+#reviews-list p:nth-child(-n+3),
+  p:nth-child(3n) {
+    font-weight: bold;
+  }
+
+#reviews-list p:nth-child(3n){
+  text-align-last: right;
+}
+  
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -284,7 +294,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -324,9 +334,10 @@ nav h1 a {
   }
 
   #restaurant-container {
-    width: 80%;
-    margin: auto;
+    width: 82%;
     text-align: center;
+    margin: auto;
+    
   }
   #reviews-container {
     padding: 30px 0px 80px;
@@ -351,7 +362,11 @@ nav h1 a {
   }
  
   #footer {
-    text-align: left;
+    /* text-align: center; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
     font-size: 10px;
     width: 100% !important;  /*add priority */
   }
